Fixed header spacing

--- a/styles.css
+++ b/styles.css
@@ -33,10 +33,10 @@ header img {
 header section {
     display: flex;
     flex-flow: column;
-    justify-content: end;
+    justify-content: center;
 }
 header h1, header p {
-    margin: 0 0 5px 0;
+    margin: 5px 0 0 15px;
 }
 
 main section {
